# powersupplay2_0

./: README.md  requirements.txt
02_modulation/: CMakeLists.txt  README.md  cpu_loader.py  generate_signal.py  linux.cpp
03_demodulation/: README.md  demodulate_bfsk.py  recorder.py  signal_analyzer.py
03_demodulation/further_analysis/: demo_mfcc.py  demo_pitch.py  demo_specdesc.py  graveyard.py  specgram.py  wavplot.py
